force-app/main/default/objects/Checklist__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.10 Equipment Completed.</inlineHelpText>
    <label>01.10 Equipment</label>
    <type>Checkbox</type>
</CustomField>