force-app/main/default/objects/Checklist__c/fields/Exclusive_use__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_use__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.10 Exclusive use completed.</inlineHelpText>
    <label>01.10 Exclusive use</label>
    <type>Checkbox</type>
</CustomField>