force-app/main/default/objects/Checklist__c/fields/Expectant_parent__c.field-meta.xml
<CustomField>
    <fullName>Expectant_parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.04 Expectant parent Completed?</inlineHelpText>
    <label>03.04 Expectant parent</label>
    <type>Checkbox</type>
</CustomField>