force-app/main/default/objects/Checklist__c/fields/Face_Sheet_Complete__c.field-meta.xml
<CustomField>
    <fullName>Face_Sheet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.05 Face Sheet</label>
    <type>Checkbox</type>
</CustomField>