force-app/main/default/objects/Checklist__c/fields/Face_to_face_complete__c.field-meta.xml
<CustomField>
    <fullName>Face_to_face_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.10 Face-to-face inquiry interview completed</inlineHelpText>
    <label>03.10 Face-to-face inquiry interview</label>
    <type>Checkbox</type>
</CustomField>