force-app/main/default/objects/Checklist__c/fields/Face_to_face_reason__c.field-meta.xml
<CustomField>
    <fullName>Face_to_face_reason__c</fullName>
    <inlineHelpText>03.10 Face-to-face inquiry interview completed</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>