force-app/main/default/objects/Checklist__c/fields/Financial_payments_complete__c.field-meta.xml
<CustomField>
    <fullName>Financial_payments_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.16 Financial payments</label>
    <type>Checkbox</type>
</CustomField>