force-app/main/default/objects/Checklist__c/fields/Finding_of_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Finding_of_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.12 Finding of Abuse  or neglect completed.</inlineHelpText>
    <label>01.12 Finding of Abuse or neglect</label>
    <type>Checkbox</type>
</CustomField>