force-app/main/default/objects/Checklist__c/fields/Finding_of_Abuse_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finding_of_Abuse_Reason__c</fullName>
    <inlineHelpText>01.12 Finding of Abuse of neglect reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>