force-app/main/default/objects/Checklist__c/fields/Fire_Arms_Pets_completed__c.field-meta.xml
<CustomField>
    <fullName>Fire_Arms_Pets_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.10 Fire Arms &amp; Pets</label>
    <type>Checkbox</type>
</CustomField>