force-app/main/default/objects/Checklist__c/fields/Fire_Department_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fire_Department_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.10 Fire Department</label>
    <type>Checkbox</type>
</CustomField>