force-app/main/default/objects/Checklist__c/fields/Four_references__c.field-meta.xml
<CustomField>
    <fullName>Four_references__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.09 Four references</label>
    <type>Checkbox</type>
</CustomField>