force-app/main/default/objects/Checklist__c/fields/Governing_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Governing_Section_Completed__c</fullName>
    <formula>OR( Selected_chief_administrator__c , Meets_quarterly__c , Periodic_change__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>