force-app/main/default/objects/Checklist__c/fields/Grievance_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Grievance Procedures</inlineHelpText>
    <label>01.08 Grievance Procedures</label>
    <type>Checkbox</type>
</CustomField>