force-app/main/default/objects/Checklist__c/fields/Guardianship_information__c.field-meta.xml
<CustomField>
    <fullName>Guardianship_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.05 Guardianship information</label>
    <type>Checkbox</type>
</CustomField>