force-app/main/default/objects/Checklist__c/fields/Health_Department_Complete__c.field-meta.xml
<CustomField>
    <fullName>Health_Department_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.10 Health Department</label>
    <type>Checkbox</type>
</CustomField>