force-app/main/default/objects/Checklist__c/fields/Home_study_application_completed__c.field-meta.xml
<CustomField>
    <fullName>Home_study_application_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.10 Home study application</label>
    <type>Checkbox</type>
</CustomField>