force-app/main/default/objects/Checklist__c/fields/Home_study_by_child_Completed__c.field-meta.xml
<CustomField>
    <fullName>Home_study_by_child_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.11 Home study by child placement worker completed.</inlineHelpText>
    <label>03.11 Home study by child</label>
    <type>Checkbox</type>
</CustomField>