force-app/main/default/objects/Checklist__c/fields/Home_study_Completed__c.field-meta.xml
<CustomField>
    <fullName>Home_study_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.11 Home study completed within 90 days completed.</inlineHelpText>
    <label>03.11 Home study completed within 90 day</label>
    <type>Checkbox</type>
</CustomField>