force-app/main/default/objects/Checklist__c/fields/Home_study_includes_Completed__c.field-meta.xml
<CustomField>
    <fullName>Home_study_includes_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.11 Home study includes worker&apos;s judgement completed.</inlineHelpText>
    <label>03.11 Home study includes worker&apos;s</label>
    <type>Checkbox</type>
</CustomField>