force-app/main/default/objects/Checklist__c/fields/Home_study_includes_workers_reaso__c.field-meta.xml
<CustomField>
    <fullName>Home_study_includes_workers_reaso__c</fullName>
    <inlineHelpText>03.11 Home study includes worker&apos;s judgement reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>