force-app/main/default/objects/Checklist__c/fields/If_foster_child_care_completed__c.field-meta.xml
<CustomField>
    <fullName>If_foster_child_care_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.05 If foster child, foster care record</inlineHelpText>
    <label>03.05 If foster child, foster care</label>
    <type>Checkbox</type>
</CustomField>