force-app/main/default/objects/Checklist__c/fields/If_school_age_edu_completed__c.field-meta.xml
<CustomField>
    <fullName>If_school_age_edu_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.05 If school age, educational history</inlineHelpText>
    <label>03.05 If school age, educational</label>
    <type>Checkbox</type>
</CustomField>