force-app/main/default/objects/Checklist__c/fields/Immunization_history_reason__c.field-meta.xml
<CustomField>
    <fullName>Immunization_history_reason__c</fullName>
    <inlineHelpText>02.17 Immunization history within 30 days reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>