force-app/main/default/objects/Checklist__c/fields/Includes_all_specified_Completed__c.field-meta.xml
<CustomField>
    <fullName>Includes_all_specified_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.11 Includes all specified topics completed.</inlineHelpText>
    <label>03.11 Includes all specified topics</label>
    <type>Checkbox</type>
</CustomField>