force-app/main/default/objects/Checklist__c/fields/Includes_all_specified_reason__c.field-meta.xml
<CustomField>
    <fullName>Includes_all_specified_reason__c</fullName>
    <inlineHelpText>03.11 Includes all specified topics reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>