force-app/main/default/objects/Checklist__c/fields/Intake_study_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intake_study_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Intake Study</inlineHelpText>
    <label>03.05 Intake study</label>
    <type>Checkbox</type>
</CustomField>