force-app/main/default/objects/Checklist__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.18 International</label>
    <type>Checkbox</type>
</CustomField>