force-app/main/default/objects/Checklist__c/fields/License_chief_administrator__c.field-meta.xml
<CustomField>
    <fullName>License_chief_administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.14 License chief administrator</label>
    <type>Checkbox</type>
</CustomField>