force-app/main/default/objects/Checklist__c/fields/License_posted_for_public__c.field-meta.xml
<CustomField>
    <fullName>License_posted_for_public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.05 License posted for public view completed.</inlineHelpText>
    <label>01.05 License posted for public view</label>
    <type>Checkbox</type>
</CustomField>