force-app/main/default/objects/Checklist__c/fields/License_posted_for_public_view__c.field-meta.xml
<CustomField>
    <fullName>License_posted_for_public_view__c</fullName>
    <inlineHelpText>01.05 License posted for public view reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>