force-app/main/default/objects/Checklist__c/fields/Licensed_child_placement_worker__c.field-meta.xml
<CustomField>
    <fullName>Licensed_child_placement_worker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.13 Licensed child placement worker</label>
    <type>Checkbox</type>
</CustomField>