force-app/main/default/objects/Checklist__c/fields/List_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>List_of_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 List of Employees</inlineHelpText>
    <label>01.08 List of Employees</label>
    <type>Checkbox</type>
</CustomField>