force-app/main/default/objects/Checklist__c/fields/Locked_file_cabinets__c.field-meta.xml
<CustomField>
    <fullName>Locked_file_cabinets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.10 Locked file cabinets completed.</inlineHelpText>
    <label>01.10 Locked file cabinets</label>
    <type>Checkbox</type>
</CustomField>