force-app/main/default/objects/Checklist__c/fields/Locked_file_cabinets_reason__c.field-meta.xml
<CustomField>
    <fullName>Locked_file_cabinets_reason__c</fullName>
    <inlineHelpText>01.10 Locked file cabinets reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>