force-app/main/default/objects/Checklist__c/fields/Maintenance_of_foster_par_complet__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_of_foster_par_complet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.16 Maintenance of foster parents</label>
    <type>Checkbox</type>
</CustomField>