force-app/main/default/objects/Checklist__c/fields/Medical_information__c.field-meta.xml
<CustomField>
    <fullName>Medical_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.13 Medical information</label>
    <type>Checkbox</type>
</CustomField>