force-app/main/default/objects/Checklist__c/fields/Medical_records_complete__c.field-meta.xml
<CustomField>
    <fullName>Medical_records_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.05 Medical records</label>
    <type>Checkbox</type>
</CustomField>