force-app/main/default/objects/Checklist__c/fields/Medical_requirements_complete__c.field-meta.xml
<CustomField>
    <fullName>Medical_requirements_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Medical requirements</inlineHelpText>
    <label>02.06 Medical requirements</label>
    <type>Checkbox</type>
</CustomField>