force-app/main/default/objects/Checklist__c/fields/Meets_quarterly__c.field-meta.xml
<CustomField>
    <fullName>Meets_quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.07 Meets quarterly</label>
    <type>Checkbox</type>
</CustomField>