force-app/main/default/objects/Checklist__c/fields/mmunization_history_completed__c.field-meta.xml
<CustomField>
    <fullName>mmunization_history_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.17 Immunization history  within 30 days completed.</inlineHelpText>
    <label>02.17 Immunization history within 30 day</label>
    <type>Checkbox</type>
</CustomField>