force-app/main/default/objects/Checklist__c/fields/Monitoring_activity_complete__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_activity_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.16 Monitoring activity</label>
    <type>Checkbox</type>
</CustomField>