force-app/main/default/objects/Checklist__c/fields/Monthly_visits_by_worker__c.field-meta.xml
<CustomField>
    <fullName>Monthly_visits_by_worker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Monthly visits by worker</inlineHelpText>
    <label>02.17 Monthly visits by worker</label>
    <type>Checkbox</type>
</CustomField>