force-app/main/default/objects/Checklist__c/fields/Monthly_visits_by_worker_reason__c.field-meta.xml
<CustomField>
    <fullName>Monthly_visits_by_worker_reason__c</fullName>
    <inlineHelpText>Monthly visits by worker</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>