force-app/main/default/objects/Checklist__c/fields/Mother_Infant_requirement_complet__c.field-meta.xml
<CustomField>
    <fullName>Mother_Infant_requirement_complet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.08 Mother/Infant requirements</label>
    <type>Checkbox</type>
</CustomField>