force-app/main/default/objects/Checklist__c/fields/Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>