force-app/main/default/objects/Checklist__c/fields/Office_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Office_Section_Completed__c</fullName>
    <formula>OR( License_posted_for_public__c , Equipment__c , Locked_file_cabinets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>