force-app/main/default/objects/Checklist__c/fields/Operating_budget_and_audit__c.field-meta.xml
<CustomField>
    <fullName>Operating_budget_and_audit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Operating budget and audit</inlineHelpText>
    <label>01.08 Operating budget and audit</label>
    <type>Checkbox</type>
</CustomField>