force-app/main/default/objects/Checklist__c/fields/Per_Check_5_year_of_personnel__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_5_year_of_personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 5 year of personnel files</inlineHelpText>
    <label>01.13 5 year retention of personnel file</label>
    <type>Checkbox</type>
</CustomField>