force-app/main/default/objects/Checklist__c/fields/Per_Check_Annual_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Annual_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 Annual evaluation</inlineHelpText>
    <label>01.13 Annual evaluation</label>
    <type>Checkbox</type>
</CustomField>