force-app/main/default/objects/Checklist__c/fields/Per_Check_Confidentiality_procedures__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Confidentiality_procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 Confidentiality procedures</inlineHelpText>
    <label>01.13 Confidentiality procedures</label>
    <type>Checkbox</type>
</CustomField>