force-app/main/default/objects/Checklist__c/fields/Per_Check_Non_discriminatory_environment__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Non_discriminatory_environment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.13 Non-discriminatory Environment</inlineHelpText>
    <label>01.13 Non-discriminatory environment</label>
    <type>Checkbox</type>
</CustomField>